# Lightweight-Embedded-Event-Driven-Platform-Core

./: .gitignore  CMakeLists.txt  README.md
include/core/: EventLoop.h  Metrics.h  Scheduler.h
src/: EventLoop.cpp  Metrics.cpp  Scheduler.cpp  main.cpp
